external-crates/move/crates/move-compiler/tests/move_2024/parser/dot_incomplete.exp
warning[W09002]: unused variable
   ┌─ tests/move_2024/parser/dot_incomplete.move:11:13
   │
11 │     fun foo(s: AnotherStruct) {
   │             ^ Unused parameter 's'. Consider removing or prefixing with an underscore: '_s'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:12:23
   │
12 │         let _tmp1 = s.;                // incomplete with `;` (next line should parse)
   │                       ^
   │                       │
   │                       Unexpected ';'
   │                       Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:13:37
   │
13 │         let _tmp2 = s.another_field.;  // incomplete with `;` (next line should parse)
   │                                     ^
   │                                     │
   │                                     Unexpected ';'
   │                                     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:15:9
   │
15 │         let _tmp4 = s;
   │         ^^^
   │         │
   │         Unexpected 'let'
   │         Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/dot_incomplete.move:17:5
   │
17 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

